# minishell

./: CMakeLists.txt  Makefile  README.md  a.out  main.c  minishell  supp
includes/: libft.h  minishell.h  minishell.h.gch  parser.h  shell.h  structs.h
libft/: ft_calloc.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c
libfts/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_itoa.c  ft_lstclear.c  ft_lstlast.c  ft_memcmp.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strcpy.c  ft_striteri.c  ft_strlcpy.c  ft_strncmp.c  ft_strrchr.c  ft_toupper.c  libft.h
srcs/: a.out  builtin_echo.c  builtin_exit_status.c  builtin_history.c  builtin_pwd.c  envp_utils.c  error_handler.c  init_utils.c  input_utils.c  main.c  prompt_utils.c  quotes_utils.c  signal_handler.c  tokenizer.c
srcs/parser/: check_quote.c  env.c  init.c  lexer.c  parser.c  parser_util.c  parser_util2.c  syntax_error.c  token_check.c  tokenizer.c
srcs/shell/: command.c  command_cd.c  command_echo.c  command_env.c  command_exit.c  command_export.c  command_pwd.c  command_unset.c  command_util1.c  command_util2.c  execution.c  execve.c  here_doc.c  here_doc2.c  init_minishell.c  pipe.c  redirect.c
srcs/util/: free1.c  free2.c  print_error.c  signal.c  (+3 more)
